generating token module completed
